[tool.poetry]
name = "medical-insurance-app"
version = "0.1.0"
description = "Ask questions about your medical insurance PDF using AI"
authors = ["Riya Swaminathan"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.42"
psycopg2-binary = "^2.9.10"
pgvector = "^0.4.1"
pdfplumber = "^0.11.7"
requests = "^2.32.4"
langchain = "^0.3.27"
langchain-google-genai = "^2.1.8"
python-dotenv = "^1.1.1"
langgraph = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
